# ArenaMind

./: .env.example  .gitignore  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
backend/: Dockerfile  __init__.py  arena_server.py  py.typed  requirements.txt
backend/app/crowd_control/: arena_crowd_router.py  arena_density_engine.py  arena_signage_translator.py  sector_models.py
backend/app/data/: arena_sim_scenarios.json  arena_venue_graph.json
backend/app/fan_services/: arena_fan_router.py  arena_pathfinder.py
backend/app/volunteer_ops/: arena_translation_desk.py  arena_volunteer_router.py  volunteer_models.py
backend/tests/: __init__.py  test_crowd_router.py  test_density_engine.py  test_edge_cases.py  test_fan_router.py  test_pathfinder.py  test_volunteer_router.py
frontend/: .gitignore  Dockerfile  index.html  package-lock.json  package.json  playwright.config.js
frontend/public/: llms.txt
frontend/src/: App.jsx  ArenaControlDesk.css  ArenaControlDesk.jsx  index.css
frontend/src/components/: OperationsFeed.jsx  SectorManifestTable.jsx  StadiumMapVisualizer.jsx  TelemetryMap.jsx
frontend/src/infrastructure/: arena_telemetry_gateway.js
frontend/src/pages/: FanAccessibility.jsx  FanLanding.jsx  FanTransit.jsx  FanWayfinding.jsx
frontend/tests/: e2e.spec.js
