[project]
name = "arenamind"
version = "1.0.0"
description = "ArenaMind - Deterministic Stadium Operations and Fan Wayfinding Platform"
requires-python = ">=3.11"
authors = [{ name = "Kartik Joshi"}]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Enable standard, flake8, bugbear, conventions, and complexity rules
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "C90", "SIM", "RUF"]
ignore = ["E501", "E402"]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=backend.app --cov-report=term-missing"
testpaths = ["backend/tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["backend/app"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "backend.tests.*"
disallow_untyped_defs = false

[tool.interrogate]
fail-under = 100
ignore-init-method = true
